# webassembly-interpreter

./: CMakeLists.txt  README.md  challenges.md  results
src/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Module.h  Parser.cpp  Parser.h  TestRunner.cpp  cross_platform.h  main.cpp
tests/: CMakeLists.txt  TestSuite.cpp  TestSuite.h  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp  test_08.cpp  test_09.cpp  test_main.cpp
tests/wasm/: 06_test_fc.wasm  08_test_post_mvp.wasm
tests/wat/: 01_test.wat  02_test_prio1.wat  03_test_prio2.wat  04_test_prio3.wat  05_test_complex.wat  06_test_fc.wat  07_test_bulk_memory.wat  08_test_post_mvp.wat  09_print_hello.wat
